@@ -28,6 +28,7 @@ Angelos Chatzipapas (chatzipa@ceid.upatras.gr)
 Eugene Chemeritskiy (echemeritskiy@arccn.ru)
 Yufei Cheng (yfcheng@ittc.ku.edu)
 Andrey Churin (aachurin@gmail.com)
+Benjamin Cizdziel (ben.cizdziel@gmail.com)
 Salva Climent (jocliba@gmail.com)
 Luis Cortes (cortes@gatech.edu)
 Luca Costantino (luca.costantino@gmail.com)
